# DEEPX-YOLO26

./: .gitattributes  CMakeLists.txt  README.md  build.sh  run.sh
assets/models/: yolo26s-1.dxnn
assets/videos/: cctv-city-road.mov  dron-citry-road.mov
config/: default.yaml
src/: config.hpp  engine.cpp  engine.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  safe_queue.hpp  workers.cpp  workers.hpp
